advanced_functionality/distributed-training-pipeline/cfn-sagemaker-notebook.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Creates VPC and subnets for SageMaker training. 
  It also creates an EFS file-system for SageMaker training input.
  Finally, it creates a SageMaker notebook instance that mounts
  the EFS file-system for staging Training data on EFS file-system.
Parameters:
  VpcCIDR:
    Default: 172.30.0.0/16
    Description: Vpc CIDR
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    Type: String
  AvailabilityZones:
    Description: Comma separated list of exactly 3 availability zones, in the order of preference.
    Type: CommaDelimitedList
  PublicSubnetCIDR:
    Default: 172.30.0.0/24
    Description: Public Subnet CIDR in Vpc CIDR
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    Type: String
  PrivateSubnet1CIDR:
    Default: 172.30.64.0/18
    Description: Private Subnet1 CIDR in Vpc CIDR
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    Type: String
  PrivateSubnet2CIDR:
    Default: 172.30.128.0/18
    Description: Private Subnet2 CIDR in Vpc CIDR
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    Type: String
  PrivateSubnet3CIDR:
    Default: 172.30.192.0/18
    Description: Private Subnet2 CIDR in Vpc CIDR
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    Type: String
  EbsVolumeSize:
    Default: '200'
    Description: Notebook instance EBS volume size, 200 GB - 1000 GB
    Type: Number
    MinValue: 200
    MaxValue: 1000
  NotebookInstanceType:
    Description: SageMaker Notebook instance type.
    Type: String
    Default: 'ml.m5.2xlarge'
    AllowedValues:
      - 'ml.m5.2xlarge'
      - 'ml.m5.4xlarge'
      - 'ml.m5.8xlarge'
    ConstraintDescription: Subset of supported SageMaker Notebook instance types
  EFSFileSystemId:
    Description: >-
      (Advanced) Existing Amazon EFS Id with no existing mount targets, or blank to create a new EFS.
    Type: String
    AllowedPattern: '(^fs-[0-9a-f]{8,8})$|()$'
    Default: ''
    ConstraintDescription: Should be a Valid EFS File System Id
  EFSSharedDir:
    Description: >-
      EFS shared file-system directory
    Type: String
    Default: '/'
    ConstraintDescription: Should be a valid EFS File System absolute directory path
  EFSMountPoint:
    Description: >-
      EFS mount point
    Type: String
    Default: '/home/ec2-user/efs'
    ConstraintDescription: Should be a valid local file-system absolute directory path
  GitHubUsername:
    Description: GitHub username
    Type: String
  GitHubToken:
    Description: GitHub Token
    Type: String
  CodeRepoName:
    Description: Code Repository name
    Type: String
    Default: sagemaker-github-repo
  GitHubRepoUrl:
    Description: GitHub Repository Url
    Type: String
    Default: ''
  GitHubRepoBranch:
    Description: GitHub Repository branch
    Type: String
    Default: ''
  NotebookInstanceName:
    Description: SageMaker Notebook instance name
    Type: String
    Default: 'sagemaker-notebook'
  S3BucketName:
    Description: SageMaker S3 Bucket Name
    Type: String
    AllowedPattern: '[a-zA-Z0-9][a-zA-Z0-9-\.]{2,62}'

  FSxStorageCapacityGiB:
    Description: FSx for Lustre Storage capacity in multiples of 2400 GiB
    Type: Number
    Default: 2400
    AllowedValues:
      - 2400
      - 4800
      - 7200

  FSxS3ImportPrefix:
    Description: FSx for Lustre S3 prefix in S3BucketName. Ensure prefix folder exists.
    Type: String
    Default: "sagemaker"

  FSxMountPoint:
    Description: >-
      FSx for Lustre local file-system mount point
    Type: String
    Default: '/home/ec2-user/fsx'
    ConstraintDescription: Should be a valid local file-system absolute directory path

Conditions:
  CreateNewEFS: !Equals [ !Ref EFSFileSystemId, '']
  CreateCodeRepo: !Not [!Equals [ !Ref GitHubRepoUrl, ''] ]
  CreateGitHubRepoSecret: !And 
    - !Not [ !Equals [!Ref GitHubToken, ''] ]
    - !Not [ !Equals [!Ref GitHubUsername, ''] ]

Resources:
  Vpc:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: !Ref 'AWS::StackName'
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Network
          Value: Public
        - Key: Name
          Value: !Ref 'AWS::StackName'
  GatewayToInternet:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - Fn::GetAZs: ""
      CidrBlock: !Ref PublicSubnetCIDR
      Tags:
        - Key: Network
          Value: Public
        - Key: Name
          Value: !Ref 'AWS::StackName'
  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - !Ref AvailabilityZones
      CidrBlock: !Ref PrivateSubnet1CIDR
      Tags:
        - Key: Network
          Value: Private
        - Key: Name
          Value: !Ref 'AWS::StackName'
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: 
        Fn::Select: 
          - 1
          - !Ref AvailabilityZones
      CidrBlock: !Ref PrivateSubnet2CIDR
      Tags:
        - Key: Network
          Value: Private
        - Key: Name
          Value: !Ref 'AWS::StackName'
  PrivateSubnet3:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: 
        Fn::Select: 
          - 2
          - !Ref AvailabilityZones
      CidrBlock: !Ref PrivateSubnet3CIDR
      Tags:
        - Key: Network
          Value: Private
        - Key: Name
          Value: !Ref 'AWS::StackName'
  NATGatewayEIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  NATGateway:
    Type: 'AWS::EC2::NatGateway'
    DependsOn: GatewayToInternet
    Properties:
      AllocationId: !GetAtt 
        - NATGatewayEIP
        - AllocationId
      SubnetId: !Ref PublicSubnet
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    DependsOn: GatewayToInternet
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Network
          Value: Public
        - Key: Name
          Value: !Ref 'AWS::StackName'
  PublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnetRouteAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn: [ PublicRoute ]
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable
  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Network
          Value: Private
        - Key: Name
          Value: !Ref 'AWS::StackName'
  PrivateRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
  PrivateSubnet1RouteAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn: [ PrivateRoute ]
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable
  PrivateSubnet2RouteAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn: [ PrivateRoute ]
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable
  PrivateSubnet3RouteAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn: [ PrivateRoute ]
    Properties:
      SubnetId: !Ref PrivateSubnet3
      RouteTableId: !Ref PrivateRouteTable
  VpcS3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument: 
        Version: 2012-10-17
        Statement: 
          - 
            Effect: "Allow"
            Principal: "*"
            Action: 
              - "s3:*"
            Resource: "*"
      RouteTableIds:
        - !Ref PrivateRouteTable
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref Vpc
  EFSFileSystem:
    Type: 'AWS::EFS::FileSystem'
    Condition: CreateNewEFS
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      PerformanceMode: generalPurpose
      FileSystemTags:
        - Key: Name
          Value: !Ref 'AWS::StackName'
  VpcSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security group
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Ref 'AWS::StackName'
  VpcSecurityGroupIngress: 
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !GetAtt VpcSecurityGroup.GroupId
      IpProtocol: "-1"
      FromPort: 0
      ToPort: 65535
      SourceSecurityGroupId: !GetAtt VpcSecurityGroup.GroupId

  VpcSecurityGroupEgress: 
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      Description: Egress to self security group
      GroupId: !GetAtt VpcSecurityGroup.GroupId
      IpProtocol: "-1"
      FromPort: 0
      ToPort: 65535
      DestinationSecurityGroupId: !GetAtt VpcSecurityGroup.GroupId

  VpcSecurityGroupCIDREgressHttps: 
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      Description: Egress rule for out bound traffic for HTTPS
      GroupId: !GetAtt VpcSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: '0.0.0.0/0'

  VpcSecurityGroupCIDREgressHttp: 
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      Description: Egress rule for out bound traffic for HTTP
      GroupId: !GetAtt VpcSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: '0.0.0.0/0'

  MountTarget1:
    Type: 'AWS::EFS::MountTarget'
    DependsOn: [ PrivateSubnet1RouteAssociation, VpcSecurityGroupIngress ]
    Properties:
      FileSystemId: !If 
        - CreateNewEFS
        - !Ref EFSFileSystem
        - !Ref EFSFileSystemId
      SubnetId: !Ref PrivateSubnet1
      SecurityGroups:
        - !Ref VpcSecurityGroup
  MountTarget2:
    Type: 'AWS::EFS::MountTarget'
    DependsOn: [ PrivateSubnet2RouteAssociation, VpcSecurityGroupIngress ]
    Properties:
      FileSystemId: !If 
        - CreateNewEFS
        - !Ref EFSFileSystem
        - !Ref EFSFileSystemId
      SubnetId: !Ref PrivateSubnet2
      SecurityGroups:
        - !Ref VpcSecurityGroup
  MountTarget3:
    Type: 'AWS::EFS::MountTarget'
    DependsOn: [ PrivateSubnet3RouteAssociation, VpcSecurityGroupIngress ]
    Properties:
      FileSystemId: !If 
        - CreateNewEFS
        - !Ref EFSFileSystem
        - !Ref EFSFileSystemId
      SubnetId: !Ref PrivateSubnet3
      SecurityGroups:
        - !Ref VpcSecurityGroup

  FSxFileSystem:
    Type: AWS::FSx::FileSystem
    DependsOn: [ PrivateSubnet1RouteAssociation, VpcSecurityGroupIngress ]
    Properties: 
      FileSystemType: 'LUSTRE'
      LustreConfiguration: 
        ImportPath: !Sub 's3://${S3BucketName}/${FSxS3ImportPrefix}'
        ExportPath: !Sub 's3://${S3BucketName}/'
        DeploymentType: SCRATCH_2
        ImportedFileChunkSize: 512000
        AutoImportPolicy: "NEW_CHANGED"
      SecurityGroupIds: 
        - !GetAtt VpcSecurityGroup.GroupId
      StorageCapacity: !Ref FSxStorageCapacityGiB
      StorageType: 'SSD'
      SubnetIds: 
        - Ref: PrivateSubnet1
      Tags:
        - Key: Name
          Value: !Ref 'AWS::StackName'

  GitHubRepoSecret:
    Type: 'AWS::SecretsManager::Secret'
    Condition: CreateGitHubRepoSecret
    Properties:
      Description: GitHub Sign In
      SecretString: 
        Fn::Join: 
          - ''
          - - '{'
            - '"username":' 
            - !Ref GitHubUsername
            - ','
            - '"password":'
            - !Ref GitHubToken
            - '}'
      Tags:
        - Key: Name
          Value: !Ref 'AWS::StackName'
  CodeRepo:
    Type: AWS::SageMaker::CodeRepository
    Condition: CreateCodeRepo
    Properties: 
      CodeRepositoryName: !Ref CodeRepoName
      GitConfig: 
        Branch: !Ref GitHubRepoBranch
        RepositoryUrl: !Ref GitHubRepoUrl
        SecretArn: !If 
        - CreateGitHubRepoSecret
        - !Ref GitHubRepoSecret
        - !Ref 'AWS::NoValue'
  NotebookStartConfig:
    Type: AWS::SageMaker::NotebookInstanceLifecycleConfig
    Properties: 
      OnStart: 
        - Content: !Base64 
            'Fn::Join':
            - ''
            - - '#!/bin/bash -xe'
              - |+

              - AWS_REGION=
              - !Ref AWS::Region
              - |+

              - EFS_FS_ID=
              - !If [CreateNewEFS, !Ref 'EFSFileSystem', !Ref 'EFSFileSystemId' ]
              - |+

              - EFS_MOUNT_PATH=
              - !Ref EFSMountPoint
              - |+

              - EFS_SHARED_PATH=
              - !Ref EFSSharedDir
              - |+

              - FSX_FS_ID=
              - !Ref 'FSxFileSystem'
              - |+

              - FSX_MOUNT_NAME=
              - !GetAtt 'FSxFileSystem.LustreMountName'
              - |+

              - FSX_MOUNT_PATH=
              - !Ref FSxMountPoint
              - |+

              - FSX_IMPORT_PATH=
              - !Ref FSxS3ImportPrefix
              - |+

              - |
                mkdir -p $EFS_MOUNT_PATH && \
                sudo mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 $EFS_FS_ID.efs.$AWS_REGION.amazonaws.com:$EFS_SHARED_PATH $EFS_MOUNT_PATH 

                mkdir -p $FSX_MOUNT_PATH && \
                sudo amazon-linux-extras install -y lustre && \
                sudo mount -t lustre -o noatime,flock $FSX_FS_ID.fsx.$AWS_REGION.amazonaws.com@tcp:/$FSX_MOUNT_NAME/$FSX_IMPORT_PATH $FSX_MOUNT_PATH 

  NotebookInstance:
    Type: "AWS::SageMaker::NotebookInstance"
    DependsOn: [ MountTarget1, MountTarget2, MountTarget3, VpcS3Endpoint ]
    Properties:
      NotebookInstanceName: !Ref NotebookInstanceName
      InstanceType: !Ref NotebookInstanceType
      RoleArn: !GetAtt ExecutionRole.Arn
      RootAccess: Enabled
      SecurityGroupIds: 
        - !GetAtt VpcSecurityGroup.GroupId
      SubnetId: !Ref PrivateSubnet1
      DirectInternetAccess: Disabled
      AdditionalCodeRepositories: !If 
        - CreateCodeRepo
        - [!GetAtt CodeRepo.CodeRepositoryName]
        - !Ref 'AWS::NoValue'
      LifecycleConfigName: !GetAtt NotebookStartConfig.NotebookInstanceLifecycleConfigName
      VolumeSizeInGB: !Ref EbsVolumeSize
      Tags:
        - Key: Name
          Value: !Ref 'AWS::StackName'
  ExecutionRole: 
    Type: "AWS::IAM::Role"
    Properties: 
      AssumeRolePolicyDocument: 
        Version: "2012-10-17"
        Statement: 
          - 
            Effect: "Allow"
            Principal: 
              Service: 
                - "sagemaker.amazonaws.com"
            Action: 
              - "sts:AssumeRole"
      Path: "/"
      Policies: 
        - 
          PolicyName: "sagemaker-policy"
          PolicyDocument: 
            Version: "2012-10-17"
            Statement: 
              - 
                Effect: "Allow"
                Action: 
                  - "ecr:GetAuthorizationToken"
                  - "ecr:BatchCheckLayerAvailability"
                  - "ecr:GetDownloadUrlForLayer"
                  - "ecr:GetRepositoryPolicy"
                  - "ecr:DescribeRepositories"
                  - "ecr:ListImages"
                  - "ecr:DescribeImages"
                  - "ecr:BatchGetImage"
                  - "ecr:InitiateLayerUpload"
                  - "ecr:UploadLayerPart"
                  - "ecr:CompleteLayerUpload"
                  - "ecr:PutImage"
                  - "ecr:CreateRepository"
                  - "fsx:*"
                  - "sagemaker:*"
                  - "cloudformation:*"
                  - "ec2:CreateNetworkInterface"
                  - "ec2:CreateNetworkInterfacePermission"
                  - "ec2:CreateVpcEndpoint"
                  - "ec2:DeleteNetworkInterface"
                  - "ec2:DeleteNetworkInterfacePermission"
                  - "ec2:DescribeDhcpOptions"
                  - "ec2:DescribeNetworkInterfaces"
                  - "ec2:DescribeRouteTables"
                  - "ec2:DescribeSecurityGroups"
                  - "ec2:DescribeSubnets"
                  - "ec2:DescribeVpcEndpoints"
                  - "ec2:DescribeVpcs"
                  - "logs:CreateLogGroup"
                  - "logs:CreateLogStream"
                  - "logs:DescribeLogStreams"
                  - "logs:GetLogEvents"
                  - "logs:PutLogEvents"
                  - "cloudwatch:DeleteAlarms"
                  - "cloudwatch:DescribeAlarms"
                  - "cloudwatch:GetMetricData"
                  - "cloudwatch:GetMetricStatistics"
                  - "cloudwatch:ListMetrics"
                  - "cloudwatch:PutMetricAlarm"
                  - "cloudwatch:PutMetricData"
                  - "iam:PassRole"
                  - "iam:ListRoles"
                  - "kms:DescribeKey"
                  - "kms:ListAliases"
                  - "elasticfilesystem:DescribeMountTargets"
                  - "elasticfilesystem:DescribeMountTargetSecurityGroups"
                Resource: "*"
              -
                Effect: "Allow"
                Action:
                  - "iam:CreateServiceLinkedRole"
                  - "iam:AttachRolePolicy"
                  - "iam:PutRolePolicy"
                Resource: "arn:aws:iam::*:role/aws-service-role/*"
              - 
                Effect: "Allow"
                Action: 
                  - "s3:ListBucket*"
                  - "s3:GetBucket*"
                Resource:
                  - !Sub 'arn:aws:s3:::${S3BucketName}'
                  - !Sub 'arn:aws:s3:::sagemaker-${AWS::Region}-${AWS::AccountId}'
              - 
                Effect: "Allow"
                Action: 
                  - "s3:AbortMultipartUpload"
                  - "s3:ListMultipartUploadParts"
                  - "s3:PutObject*"
                  - "s3:DeleteObject*"
                  - "s3:GetObject*"
                Resource:
                  - !Sub 'arn:aws:s3:::${S3BucketName}'
                  - !Sub 'arn:aws:s3:::${S3BucketName}/*'
                  - !Sub 'arn:aws:s3:::sagemaker-${AWS::Region}-${AWS::AccountId}'
                  - !Sub 'arn:aws:s3:::sagemaker-${AWS::Region}-${AWS::AccountId}/*'
Outputs:
  SageMakerExecutionRoleArn:
    Value: !GetAtt ExecutionRole.Arn
  SecurityGroup:
    Value:
      Fn::Join:
        - ''
        - - '['
          - '''' 
          - !GetAtt VpcSecurityGroup.GroupId
          - '''' 
          - ']'
  Subnets:
    Value:
      Fn::Join:
        - ''
        - - '['
          - '''' 
          - !Ref PrivateSubnet1
          - '''' 
          - ','
          - '''' 
          - !Ref PrivateSubnet2
          - '''' 
          - ','
          - '''' 
          - !Ref PrivateSubnet3
          - '''' 
          - ']'
